# sep25cds_predisinistre

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: X_train.csv  insurance_claims_clean.csv  insurance_claims_encoded.csv
models/: best_pipeline_gb.pkl  best_pipeline_hgb.pkl  best_pipeline_xgb.pkl  cat_modalities.pkl  feature_names.pkl  model_metadata.json  num_stats.json  y_prob_gb.pkl  y_prob_hgb.pkl  y_prob_xgb.pkl
notebooks/: 01_EDA.ipynb  EDA_Pred_Sin.ipynb  Pred_Sin_EDA.ipynb  PrediSinistre.ipynb  PrediSinistre_EDA.ipynb  PrediSinistre_modelisation_de_donnees.ipynb  PrediSinistre_streamlit_app.py  Rendu_2_Modelisation_Avancee.ipynb  modelisation_de_donnees.ipynb  streamlit_app.py  streamlit_app_final.py
reports/: Pre_Sinistre_Rendu1.html  Pre_Sinistre_Rendu1.ipynb  PrediSinstre_EDA_Report.html  Présentation_PrédiSinistre.pptx
reports/reports/: Macro_Gantt_PrediSinistre.xlsx  PrediSinistre - Rapport exploration des données.xlsx
