[project]
name = "predi-sinistre"
version = "0.1.0"
description = "Modèle prédictif pour détection de réclamations d'assurance potentiellement frauduleuses ou non"
authors = [
    {name = "Christ Peryclais",email = "christ.peryclais@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "wordcloud (>=1.9.6,<2.0.0)",
    "nbconvert (>=7.17.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "sweetviz (>=2.3.1,<3.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "shap (>=0.51.0,<0.52.0)",
    "lime (>=0.2.0.1,<0.3.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
